Added tutorial for install server ssl reloading

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <modules>
         <module>mock-statics-with-mockito</module>
+        <module>instant-server-ssl-reloading</module>
     </modules>
 
     <licenses>
