--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>mock-statics-with-mockito</module>
         <module>instant-server-ssl-reloading</module>
+        <module>log-captor-examples</module>
     </modules>
 
     <licenses>
@@ -37,7 +38,18 @@
         <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
         <version.maven-fail-safe>3.0.0-M5</version.maven-fail-safe>
         <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
+        <version.maven-shade-plugin>3.2.4</version.maven-shade-plugin>
+        <version.exec-maven-plugin>1.6.0</version.exec-maven-plugin>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <version.sslcontext-kickstart>6.3.0</version.sslcontext-kickstart>
+        <version.logcaptor>2.4.0</version.logcaptor>
+        <version.spring>2.4.2</version.spring>
+        <version.jackson>2.12.1</version.jackson>
+        <version.slf4j>1.7.30</version.slf4j>
+        <version.assertj-core>3.19.0</version.assertj-core>
+        <version.junit>5.7.1</version.junit>
+        <version.mockito>3.7.7</version.mockito>
     </properties>
 
     <build>
