--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <version.spring>2.4.2</version.spring>
         <version.jackson>2.12.1</version.jackson>
         <version.slf4j>1.7.30</version.slf4j>
+        <version.log4j-core>2.14.0</version.log4j-core>
         <version.assertj-core>3.19.0</version.assertj-core>
         <version.junit>5.7.1</version.junit>
         <version.mockito>3.7.7</version.mockito>
