Added logback classic example

--- a/log-captor-examples/pom.xml
+++ b/log-captor-examples/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>log-captor-with-java-util-logging</module>
         <module>log-captor-with-log4j-core</module>
+        <module>log-captor-with-logback-classic</module>
     </modules>
 
     <parent>
