--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>mock-statics-with-mockito</module>
         <module>instant-server-ssl-reloading</module>
         <module>log-captor-examples</module>
+        <module>grpc-client-server-with-ssl</module>
     </modules>
 
     <licenses>
@@ -39,6 +40,8 @@
         <version.maven-fail-safe>3.0.0-M5</version.maven-fail-safe>
         <version.maven-compiler-plugin>3.8.1</version.maven-compiler-plugin>
         <version.maven-shade-plugin>3.2.4</version.maven-shade-plugin>
+        <version.os-maven-plugin>1.6.2</version.os-maven-plugin>
+        <version.protobuf-maven-plugin>0.6.1</version.protobuf-maven-plugin>
         <version.exec-maven-plugin>1.6.0</version.exec-maven-plugin>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -47,9 +50,14 @@
         <version.spring>2.4.2</version.spring>
         <version.jackson>2.12.1</version.jackson>
         <version.slf4j>1.7.30</version.slf4j>
+        <version.slf4j-simple></version.slf4j-simple>
         <version.log4j-core>2.14.0</version.log4j-core>
         <version.log4j-slf4j>2.14.0</version.log4j-slf4j>
         <version.logback-classic>1.2.3</version.logback-classic>
+        <version.grpc>1.36.0</version.grpc>
+        <version.google.protobuf-java>3.15.5</version.google.protobuf-java>
+        <version.javax.annotation-api>1.3.2</version.javax.annotation-api>
+        <version.protoc>3.12.0</version.protoc>
         <version.assertj-core>3.19.0</version.assertj-core>
         <version.junit>5.7.1</version.junit>
         <version.mockito>3.7.7</version.mockito>
