Added Spring Boot Reactive Server with Common Name Validation based on Spring Security

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>instant-server-ssl-reloading</module>
         <module>log-captor-examples</module>
         <module>grpc-client-server-with-ssl</module>
+        <module>spring-security-cn-validation-for-reactive-server</module>
     </modules>
 
     <licenses>
@@ -50,7 +51,7 @@
         <version.spring>2.4.4</version.spring>
         <version.jackson>2.12.2</version.jackson>
         <version.slf4j>1.7.30</version.slf4j>
-        <version.slf4j-simple></version.slf4j-simple>
+        <version.slf4j-simple>1.7.30</version.slf4j-simple>
         <version.log4j-core>2.14.0</version.log4j-core>
         <version.log4j-slf4j>2.14.1</version.log4j-slf4j>
         <version.logback-classic>1.2.3</version.logback-classic>
