--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>log-captor-examples</module>
         <module>grpc-client-server-with-ssl</module>
         <module>spring-security-cn-validation-for-reactive-server</module>
+        <module>elasticsearch-with-ssl</module>
     </modules>
 
     <licenses>
@@ -56,6 +57,7 @@
         <version.log4j-slf4j>2.14.1</version.log4j-slf4j>
         <version.logback-classic>1.2.3</version.logback-classic>
         <version.grpc>1.36.1</version.grpc>
+        <version.elasticsearch>7.12.0</version.elasticsearch>
         <version.google.protobuf-java>3.15.6</version.google.protobuf-java>
         <version.javax.annotation-api>1.3.2</version.javax.annotation-api>
         <version.protoc>3.12.0</version.protoc>
