--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>grpc-client-server-with-ssl</module>
         <module>spring-security-cn-validation-for-reactive-server</module>
         <module>elasticsearch-with-ssl</module>
+        <module>websocket-client-with-ssl</module>
     </modules>
 
     <licenses>
@@ -47,7 +48,7 @@
         <version.exec-maven-plugin>3.0.0</version.exec-maven-plugin>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <version.sslcontext-kickstart>6.6.3</version.sslcontext-kickstart>
+        <version.sslcontext-kickstart>6.7.0</version.sslcontext-kickstart>
         <version.logcaptor>2.5.0</version.logcaptor>
         <version.spring>2.5.2</version.spring>
         <version.jackson>2.12.3</version.jackson>
@@ -61,6 +62,7 @@
         <version.google.protobuf-java>3.17.1</version.google.protobuf-java>
         <version.javax.annotation-api>1.3.2</version.javax.annotation-api>
         <version.protoc>3.12.0</version.protoc>
+        <version.websocket-client>9.4.43.v20210629</version.websocket-client>
         <version.assertj-core>3.20.2</version.assertj-core>
         <version.junit>5.7.2</version.junit>
         <version.mockito>3.11.2</version.mockito>
