--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <version.assertj-core>3.20.2</version.assertj-core>
         <version.junit>5.7.2</version.junit>
         <version.mockito>3.11.2</version.mockito>
+        <version.consolecaptor>1.0.0</version.consolecaptor>
     </properties>
 
     <build>
