--- a/elasticsearch-with-ssl/pom.xml
+++ b/elasticsearch-with-ssl/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${version.slf4j-simple}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>${version.log4j-slf4j}</version>
+        </dependency>
     </dependencies>
 
 </project>
