--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>elasticsearch-with-ssl</module>
         <module>websocket-client-with-ssl</module>
         <module>two-way-object-serialization</module>
+        <module>spring-cn-validation-with-aop</module>
     </modules>
 
     <licenses>
@@ -52,6 +53,7 @@
         <version.sslcontext-kickstart>7.1.0</version.sslcontext-kickstart>
         <version.logcaptor>2.7.8</version.logcaptor>
         <version.spring>2.6.2</version.spring>
+        <version.aspectweaver>1.9.7</version.aspectweaver>
         <version.jackson>2.13.1</version.jackson>
         <version.slf4j>1.7.32</version.slf4j>
         <version.slf4j-simple>1.7.30</version.slf4j-simple>
