--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>two-way-object-serialization</module>
         <module>spring-cn-validation-with-aop</module>
         <module>instant-server-ssl-reloading-with-vertx</module>
+        <module>instant-server-ssl-reloading-with-netty</module>
     </modules>
 
     <licenses>
@@ -68,6 +69,7 @@
         <version.protoc>3.12.0</version.protoc>
         <version.websocket-client>9.4.46.v20220331</version.websocket-client>
         <version.vertx>4.2.7</version.vertx>
+        <version.netty>4.1.76.Final</version.netty>
         <version.assertj-core>3.22.0</version.assertj-core>
         <version.junit>5.8.2</version.junit>
         <version.mockito>4.4.0</version.mockito>
