--- a/console-captor-examples/pom.xml
+++ b/console-captor-examples/pom.xml
@@ -3,12 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <modules>
-        <module>log-captor-with-java-util-logging</module>
-        <module>log-captor-with-log4j-core</module>
-        <module>log-captor-with-slf4j-logback-classic</module>
-        <module>log-captor-with-slf4j-log4j</module>
-        <module>log-captor-with-spring-boot-starter-log4j2</module>
+        <module>console-captor-with-log4j-slf4j18</module>
     </modules>
 
     <parent>
@@ -17,15 +14,15 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>log-captor-examples-parent</artifactId>
+    <artifactId>console-captor-examples-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>logcaptor</artifactId>
-            <version>${version.logcaptor}</version>
+            <artifactId>consolecaptor</artifactId>
+            <version>${version.consolecaptor}</version>
             <scope>test</scope>
         </dependency>
 
