--- a/log-captor-examples/pom.xml
+++ b/log-captor-examples/pom.xml
@@ -9,6 +9,7 @@
         <module>log-captor-with-slf4j-logback-classic</module>
         <module>log-captor-with-slf4j-log4j</module>
         <module>log-captor-with-spring-boot-starter-log4j2</module>
+        <module>log-captor-with-jboss-and-lombok</module>
     </modules>
 
     <parent>
