--- a/log-captor-examples/pom.xml
+++ b/log-captor-examples/pom.xml
@@ -10,6 +10,7 @@
         <module>log-captor-with-slf4j-log4j</module>
         <module>log-captor-with-spring-boot-starter-log4j2</module>
         <module>log-captor-with-jboss-and-lombok</module>
+        <module>log-captor-with-quarkus-jboss-lombok</module>
     </modules>
 
     <parent>
