--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <version.exec-maven-plugin>3.1.0</version.exec-maven-plugin>
         <version.license-maven-plugin>4.2.rc3</version.license-maven-plugin>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <license.git.copyrightYears>2022</license.git.copyrightYears>
 
         <version.sslcontext-kickstart>7.4.5</version.sslcontext-kickstart>
         <version.logcaptor>2.7.10</version.logcaptor>
