--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <license.git.copyrightYears>2022</license.git.copyrightYears>
 
         <version.sslcontext-kickstart>7.4.9</version.sslcontext-kickstart>
-        <version.logcaptor>2.7.11-SNAPSHOT</version.logcaptor>
+        <version.logcaptor>2.8.0</version.logcaptor>
         <version.spring>2.7.3</version.spring>
         <version.aspectweaver>1.9.9.1</version.aspectweaver>
         <version.jackson>2.13.4</version.jackson>
