--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <version.log4j-slf4j>2.19.0</version.log4j-slf4j>
         <version.log4j-log4j-slf4j18>2.18.0</version.log4j-log4j-slf4j18>
         <version.logback-classic>1.3.5</version.logback-classic>
+        <version.flogger>0.7.4</version.flogger>
         <version.grpc>1.51.1</version.grpc>
         <version.elasticsearch>7.16.3</version.elasticsearch>
         <version.google.protobuf-java>3.21.12</version.google.protobuf-java>
