--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>console-captor-examples</module>
         <module>instant-ssl-reloading-with-spring-jetty-database</module>
         <module>instant-server-ssl-reloading-with-quarkus</module>
+        <module>instant-ssl-reloading-with-spring-tomcat</module>
     </modules>
 
     <licenses>
@@ -57,9 +58,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <license.git.copyrightYears>2022</license.git.copyrightYears>
 
-        <version.sslcontext-kickstart>8.1.6</version.sslcontext-kickstart>
+        <version.sslcontext-kickstart>8.3.1</version.sslcontext-kickstart>
         <version.logcaptor>2.9.0</version.logcaptor>
         <version.spring>2.7.5</version.spring>
+        <version-tomcat>10.1.19</version-tomcat>
         <version.aspectweaver>1.9.9.1</version.aspectweaver>
         <version.jackson>2.14.1</version.jackson>
         <version.slf4j>2.0.6</version.slf4j>
