--- a/log-captor-examples/log-captor-with-spring-boot-starter-log4j2/pom.xml
+++ b/log-captor-examples/log-captor-with-spring-boot-starter-log4j2/pom.xml
@@ -29,7 +29,7 @@
                 <version>${version.maven-surefire-plugin}</version>
                 <configuration>
                     <classpathDependencyExcludes>
-                        <classpathDependencyExclude>org.apache.logging.log4j:log4j-slf4j-impl</classpathDependencyExclude>
+                        <classpathDependencyExclude>org.apache.logging.log4j:log4j-slf4j2-impl</classpathDependencyExclude>
                     </classpathDependencyExcludes>
                 </configuration>
             </plugin>
