--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,16 +7,16 @@ on:
   pull_request:
 
 jobs:
-  build-on-linux-with-jdk-11:
+  build-on-linux-with-jdk-17:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'zulu'
+          java-version: '17'
           cache: 'maven'
 
       - name: Build and test
