--- a/bypassing-overruling-ssl-configuration/pom.xml
+++ b/bypassing-overruling-ssl-configuration/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>${version.slf4j-simple}</version>
+            <version>${version.slf4j}</version>
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
