--- a/mock-statics-with-mockito/pom.xml
+++ b/mock-statics-with-mockito/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
-            <version>${version.mockito}</version>
+            <version>${version.mockito-inline}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
