--- a/pom.xml
+++ b/pom.xml
@@ -59,15 +59,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <license.git.copyrightYears>2022</license.git.copyrightYears>
 
-        <version.sslcontext-kickstart>8.3.2</version.sslcontext-kickstart>
-        <version.logcaptor>2.9.0</version.logcaptor>
-        <version.spring>2.7.5</version.spring>
-        <version-tomcat>9.0.86</version-tomcat>
-        <version.aspectweaver>1.9.9.1</version.aspectweaver>
-        <version.jackson>2.14.1</version.jackson>
-        <version.slf4j>2.0.6</version.slf4j>
-        <version.slf4j-simple>2.0.6</version.slf4j-simple>
-        <version.log4j-core>2.19.0</version.log4j-core>
+        <version.sslcontext-kickstart>8.3.6</version.sslcontext-kickstart>
+        <version.logcaptor>2.9.3</version.logcaptor>
+        <version.spring>3.3.2</version.spring>
+        <version-tomcat>10.1.26</version-tomcat>
+        <version.aspectweaver>1.9.22.1</version.aspectweaver>
+        <version.jackson>2.17.2</version.jackson>
+        <version.slf4j>2.0.13</version.slf4j>
+        <version.log4j-core>2.23.1</version.log4j-core>
         <version.log4j-slf4j>2.19.0</version.log4j-slf4j>
         <version.log4j-log4j-slf4j18>2.18.0</version.log4j-log4j-slf4j18>
         <version.logback-classic>1.3.5</version.logback-classic>
@@ -79,14 +78,16 @@
         <version.protoc>3.12.0</version.protoc>
         <version.websocket-client>9.4.50.v20221201</version.websocket-client>
         <version.vertx>4.3.7</version.vertx>
-        <version.netty>4.1.86.Final</version.netty>
-        <version.quarkus>3.0.3.Final</version.quarkus>
+        <version.netty>4.1.112.Final</version.netty>
+        <version.quarkus>3.13.0</version.quarkus>
         <version.mysql-connector>8.3.0</version.mysql-connector>
-        <version.lombok>1.18.24</version.lombok>
-        <version.jboss-logging>3.5.0.Final</version.jboss-logging>
+        <version.lombok>1.18.34</version.lombok>
+        <version.jboss-logging>3.6.0.Final</version.jboss-logging>
         <version.assertj-core>3.23.1</version.assertj-core>
-        <version.junit>5.9.1</version.junit>
-        <version.mockito>4.11.0</version.mockito>
+        <version.junit>5.10.3</version.junit>
+        <version.junit-platform>1.10.3</version.junit-platform>
+        <version.mockito>5.12.0</version.mockito>
+        <version.mockito-inline>5.2.0</version.mockito-inline>
         <version.consolecaptor>1.0.3</version.consolecaptor>
         <version.postgresql>42.5.0</version.postgresql>
         <version.testcontainers-postgresql>1.17.3</version.testcontainers-postgresql>
