--- a/spring-security-cn-validation-for-reactive-server/pom.xml
+++ b/spring-security-cn-validation-for-reactive-server/pom.xml
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
-                <version>${version.slf4j-simple}</version>
+                <version>${version.slf4j}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
