Added trust me project and bumped java to 21
Added trust me project and bumped java to 21

--- a/mock-statics-with-mockito/pom.xml
+++ b/mock-statics-with-mockito/pom.xml
@@ -43,6 +43,12 @@
             <version>${version.assertj-core}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${version.byte-buddy}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
