--- a/log-captor-examples/log-captor-with-log4j-api/pom.xml
+++ b/log-captor-examples/log-captor-with-log4j-api/pom.xml
@@ -10,14 +10,14 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>log-captor-with-log4j-core</artifactId>
+    <artifactId>log-captor-with-log4j-api</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <artifactId>log4j-api</artifactId>
             <version>${version.log4j}</version>
         </dependency>
     </dependencies>
