--- a/log-captor-examples/pom.xml
+++ b/log-captor-examples/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>log-captor-with-java-util-logging</module>
         <module>log-captor-with-log4j-core</module>
+        <module>log-captor-with-log4j-api</module>
         <module>log-captor-with-slf4j-logback-classic</module>
         <module>log-captor-with-slf4j-log4j</module>
         <module>log-captor-with-spring-boot-starter-log4j2</module>
