--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         <version.aspectweaver>1.9.22.1</version.aspectweaver>
         <version.jackson>2.17.2</version.jackson>
         <version.slf4j>2.0.13</version.slf4j>
-        <version.log4j-core>2.23.1</version.log4j-core>
+        <version.log4j>2.23.1</version.log4j>
         <version.log4j-slf4j>2.19.0</version.log4j-slf4j>
         <version.log4j-log4j-slf4j18>2.18.0</version.log4j-log4j-slf4j18>
         <version.logback-classic>1.3.5</version.logback-classic>
