--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>instant-ssl-reloading-with-spring-jetty-database</module>
         <module>instant-server-ssl-reloading-with-quarkus</module>
         <module>instant-ssl-reloading-with-spring-tomcat</module>
+        <module>instant-ssl-reloading-with-spring-grpc</module>
         <module>bypassing-overruling-ssl-configuration</module>
         <module>trust-me</module>
         <module>jvm-rainbow</module>
@@ -82,7 +83,7 @@
         <version.log4j-log4j-slf4j18>2.18.0</version.log4j-log4j-slf4j18>
         <version.logback-classic>1.3.5</version.logback-classic>
         <version.flogger>0.7.4</version.flogger>
-        <version.grpc>1.51.1</version.grpc>
+        <version.grpc>1.77.0</version.grpc>
         <version.elasticsearch>7.16.3</version.elasticsearch>
         <version.google.protobuf-java>3.21.12</version.google.protobuf-java>
         <version.javax.annotation-api>1.3.2</version.javax.annotation-api>
@@ -96,6 +97,7 @@
         <version.jakarta-annotation-api>3.0.0</version.jakarta-annotation-api>
         <version.hibernate-validator>9.0.1.Final</version.hibernate-validator>
         <version.jboss-logging>3.6.0.Final</version.jboss-logging>
+        <version.spring-grpc-spring-boot-starter>0.12.0</version.spring-grpc-spring-boot-starter>
         <version.assertj-core>3.23.1</version.assertj-core>
         <version.junit>5.10.3</version.junit>
         <version.junit-platform>1.10.3</version.junit-platform>
