Renamed ssl library to ayza

--- a/bypassing-overruling-ssl-configuration/pom.xml
+++ b/bypassing-overruling-ssl-configuration/pom.xml
@@ -21,8 +21,8 @@
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
-            <version>${version.sslcontext-kickstart}</version>
+            <artifactId>ayza</artifactId>
+            <version>${version.ayza}</version>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
