--- a/elasticsearch-with-ssl/pom.xml
+++ b/elasticsearch-with-ssl/pom.xml
@@ -28,8 +28,8 @@
 
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
-            <version>${version.sslcontext-kickstart}</version>
+            <artifactId>ayza</artifactId>
+            <version>${version.ayza}</version>
         </dependency>
 
         <dependency>
