--- a/grpc-client-server-with-ssl/grpc-client/pom.xml
+++ b/grpc-client-server-with-ssl/grpc-client/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-netty</artifactId>
+            <artifactId>ayza-for-netty</artifactId>
         </dependency>
 
         <dependency>
