--- a/instant-server-ssl-reloading/admin/pom.xml
+++ b/instant-server-ssl-reloading/admin/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
+            <artifactId>ayza</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
