--- a/instant-server-ssl-reloading/server/pom.xml
+++ b/instant-server-ssl-reloading/server/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-jetty</artifactId>
+            <artifactId>ayza-for-jetty</artifactId>
         </dependency>
 
         <dependency>
