--- a/grpc-client-server-with-ssl/pom.xml
+++ b/grpc-client-server-with-ssl/pom.xml
@@ -52,8 +52,8 @@
 
             <dependency>
                 <groupId>io.github.hakky54</groupId>
-                <artifactId>sslcontext-kickstart-for-netty</artifactId>
-                <version>${version.sslcontext-kickstart}</version>
+                <artifactId>ayza-for-netty</artifactId>
+                <version>${version.ayza}</version>
             </dependency>
 
             <dependency>
