--- a/instant-server-ssl-reloading-with-netty/netty-server/pom.xml
+++ b/instant-server-ssl-reloading-with-netty/netty-server/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-netty</artifactId>
+            <artifactId>ayza-for-netty</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
