--- a/instant-server-ssl-reloading-with-vertx/pom.xml
+++ b/instant-server-ssl-reloading-with-vertx/pom.xml
@@ -25,8 +25,8 @@
             </dependency>
             <dependency>
                 <groupId>io.github.hakky54</groupId>
-                <artifactId>sslcontext-kickstart</artifactId>
-                <version>${version.sslcontext-kickstart}</version>
+                <artifactId>ayza</artifactId>
+                <version>${version.ayza}</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
