--- a/instant-server-ssl-reloading-with-vertx/vertx-server/pom.xml
+++ b/instant-server-ssl-reloading-with-vertx/vertx-server/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
+            <artifactId>ayza</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
