--- a/instant-ssl-reloading-with-spring-grpc/pom.xml
+++ b/instant-ssl-reloading-with-spring-grpc/pom.xml
@@ -16,8 +16,8 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-netty</artifactId>
-            <version>${version.sslcontext-kickstart}</version>
+            <artifactId>ayza-for-netty</artifactId>
+            <version>${version.ayza}</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
