--- a/instant-ssl-reloading-with-spring-jetty-database/pom.xml
+++ b/instant-ssl-reloading-with-spring-jetty-database/pom.xml
@@ -17,13 +17,13 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-jetty</artifactId>
-            <version>${version.sslcontext-kickstart}</version>
+            <artifactId>ayza-for-jetty</artifactId>
+            <version>${version.ayza}</version>
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-pem</artifactId>
-            <version>${version.sslcontext-kickstart}</version>
+            <artifactId>ayza-for-pem</artifactId>
+            <version>${version.ayza}</version>
         </dependency>
 
         <dependency>
