--- a/spring-cn-validation-with-aop/client-for-testing-server-with-cn-validation/pom.xml
+++ b/spring-cn-validation-with-aop/client-for-testing-server-with-cn-validation/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
+            <artifactId>ayza</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
