--- a/spring-cn-validation-with-aop/server-with-cn-validation/pom.xml
+++ b/spring-cn-validation-with-aop/server-with-cn-validation/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
+            <artifactId>ayza</artifactId>
         </dependency>
 
         <dependency>
