--- a/spring-security-cn-validation-for-reactive-server/client/pom.xml
+++ b/spring-security-cn-validation-for-reactive-server/client/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart</artifactId>
+            <artifactId>ayza</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
