--- a/websocket-client-with-ssl/pom.xml
+++ b/websocket-client-with-ssl/pom.xml
@@ -22,8 +22,8 @@
         </dependency>
         <dependency>
             <groupId>io.github.hakky54</groupId>
-            <artifactId>sslcontext-kickstart-for-jetty</artifactId>
-            <version>${version.sslcontext-kickstart}</version>
+            <artifactId>ayza-for-jetty</artifactId>
+            <version>${version.ayza}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
